# histd

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  DESIGN.md  README.md
cli/: main.cpp
daemon/: main.cpp
scripts/: generate_synthetic.sh
shell/: histd.plugin.bash
src/: failure_clusterer.cpp  failure_clusterer.hpp  index_store.cpp  index_store.hpp  inverted_index.cpp  inverted_index.hpp  posting_view.hpp  query_engine.cpp  query_engine.hpp  record.hpp  record_store.cpp  record_store.hpp  renderer.hpp  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  test_failure_clusterer.cpp  test_index.cpp  test_index_store.cpp  test_tokenizer.cpp
